cmake_minimum_required (VERSION 2.8.12)

if(CMAKE_VERSION VERSION_GREATER 3.0.0)
	cmake_policy(SET CMP0043 OLD)
endif()

project(iron_learning CXX)

set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
set(CMAKE_INSTALL_RPATH ".")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_BUILD_TYPE "DEBUG")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

set(GLOBAL_PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}")

SET(Boost_USE_MULTIHREAD ON)
FIND_PACKAGE(Boost REQUIRED QUIET)
FIND_PACKAGE(Boost COMPONENTS system filesystem thread regex REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

add_subdirectory (src)
