project(data CXX)

string(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)

file(GLOB_RECURSE HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

string(REPLACE "${GLOBAL_PROJECT_SOURCE_DIR}/src/" "" CMAKE_CURRENT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
string(CONCAT CMAKE_CURRENT_INCLUDE_DIR "${GLOBAL_PROJECT_SOURCE_DIR}/include/" "${CMAKE_CURRENT_INCLUDE_DIR}")

file(GLOB_RECURSE INCLUDE_FILES "${CMAKE_CURRENT_INCLUDE_DIR}/*.h" "${CMAKE_CURRENT_INCLUDE_DIR}/*.hpp")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES} ${INCLUDE_FILES})

INCLUDE_DIRECTORIES(
		"${CMAKE_CURRENT_INCLUDE_DIR}"
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
PUBLIC
	"${CMAKE_CURRENT_INCLUDE_DIR}"
PRIVATE
	"${Boost_INCLUDE_DIRS}"
)

TARGET_LINK_LIBRARIES(data basic ${Boost_LIBRARIES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    DEFINE_SYMBOL "DATA_LIB"
    FOLDER      "src/data"
    COMPILE_DEFINITIONS "_USE_MATH_DEFINES;"
    LINKER_LANGUAGE CXX
)
